# secureyeoman

./: .creatorlist  .dockerignore  .emails  .env.dev.example  .env.example  .env.expanded.example  .gitignore  .prettierignore  .site_name_to_register  ADDSQLPERSISTANCE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMUNITY_IMPROVEMENTS.md  CONNECTION_MANAGER_PROMPT.md  CONTRIBUTING.md  CURRENTPROMPT.md  DASHBOARD_PROMPT.md  DASHBOARD_REVIEW_PROMPT.md  Dockerfile  Dockerfile.agent  Dockerfile.dev  Dockerfile.security-toolkit  Dockerfile.unsloth-trainer  HARDENING_PROMPT.md  LICENSE  MULTIMODAL.md  NEXT_STEPS.md  PROASSIST.md  PRODUCTION_PROMPT.md  README.md  SECURECLAW.md  SECUREYEOMAN.md  SECURITY.md  TODO.md  VERSION  digitalocean-app.json  docker-compose.yml  eslint.config.js  package-lock.json  (+6 more)
.claude/: context-from-agnos-session.md
.githooks/: patterns.txt  pre-commit
.github/workflows/: ci.yml  release-binary.yml
cmd/secureyeoman-edge/: a2a.go  a2a_test.go  capabilities.go  capabilities_test.go  certpin.go  certpin_test.go  flags.go  flags_test.go  go.mod  go.sum  llm.go  llm_test.go  logger.go  logger_test.go  main.go  mdns.go  memory.go  memory_test.go  messaging.go  messaging_test.go  metrics.go  metrics_test.go  ratelimit.go  ratelimit_test.go  sandbox.go  sandbox_test.go  scheduler.go  scheduler_test.go  server.go  smoke_test.go  updater.go  updater_test.go
community-skills/: README.md
crates/: Cargo.toml
crates/sy-audit/: Cargo.toml
crates/sy-audit/src/: lib.rs
crates/sy-core/: Cargo.toml
crates/sy-core/src/: main.rs  middleware.rs  proxy.rs  routes.rs  server.rs  state.rs
crates/sy-core/src/auth/: jwt.rs  middleware.rs  mod.rs  permissions.rs
crates/sy-core/src/db/: a2a.rs  agents.rs  alerts.rs  analytics.rs  audit.rs  backup.rs  brain.rs  chat.rs  edge.rs  execution.rs  experiments.rs  extensions.rs  federation.rs  integrations.rs  marketplace.rs  mcp.rs  mod.rs  notifications.rs  pool.rs  proactive.rs  risk.rs  security.rs  soul.rs  spirit.rs  tasks.rs  tenants.rs  training.rs  workflow.rs  workspace.rs
crates/sy-core/src/middleware/: correlation_id.rs  security_headers.rs
crates/sy-core/src/routes/: a2a.rs  agents.rs  alerts.rs  analytics.rs  audit.rs  auth.rs  backup.rs  brain.rs  chat.rs  edge.rs  execution.rs  experiments.rs  extensions.rs  federation.rs  gateway.rs  health.rs  integrations.rs  marketplace.rs  mcp.rs  notifications.rs  proactive.rs  risk.rs  security.rs  soul.rs  spirit.rs  tasks.rs  tenants.rs  training.rs  workflow.rs  workspace.rs
crates/sy-crypto/: Cargo.toml
crates/sy-crypto/benches/: crypto.rs
crates/sy-crypto/src/: lib.rs
crates/sy-edge/: Cargo.toml
crates/sy-edge/src/: a2a.rs  capabilities.rs  certpin.rs  llm.rs  main.rs  mdns.rs  memory.rs  messaging.rs  metrics.rs  ratelimit.rs  sandbox.rs  scheduler.rs  server.rs  updater.rs
crates/sy-hwprobe/: Cargo.toml
crates/sy-hwprobe/benches/: detect.rs
crates/sy-hwprobe/src/: amd.rs  asic.rs  intel.rs  lib.rs  npu.rs  nvidia.rs  tpu.rs  types.rs
crates/sy-napi/: Cargo.toml
crates/sy-napi/src/: agnosai.rs  audit.rs  bhava.rs  bote.rs  lib.rs  majra.rs  privacy.rs  sandbox.rs  szal.rs  tee.rs
crates/sy-privacy/: Cargo.toml
crates/sy-privacy/src/: lib.rs
crates/sy-sandbox/: Cargo.toml
crates/sy-sandbox/src/: cgroup.rs  landlock.rs  lib.rs  seccomp.rs
crates/sy-tee/: Cargo.toml
crates/sy-tee/src/: lib.rs
crates/sy-types/: Cargo.toml
crates/sy-types/src/: api.rs  auth.rs  config.rs  lib.rs  memory.rs
deploy/delta/: config.toml
deploy/logging/: docker-compose-loki.yml  logrotate-friday  logrotate-secureyeoman  promtail-config.yml
deploy/prometheus/: alert-rules.yml  prometheus.yml
docker/: Caddyfile.template  Dockerfile.release  entrypoint-combined.sh  postgresql.conf  supervisord.conf
docs/: README.md  api.md  configuration.md  deployment.md  features.md  installation.md  marketing-strategy.md  openapi.yaml  proactive-heartbeat.md  troubleshooting.md  white-paper.md
docs/adr/: 000-secureyeoman-architecture-overview.md  001-dashboard-chat.md  001-system-architecture.md  002-runtime-model-switching.md  002-security-architecture.md  003-ai-providers-and-routing.md  003-sacred-archetypes.md  004-agents-and-orchestration.md  004-mcp-protocol.md  005-brain-memory-knowledge.md  005-team-workspaces.md  006-ab-testing.md  006-training-and-evaluation.md  007-dashboard-and-editor.md  007-skill-marketplace.md  008-coding-ide-view.md  008-mcp-server-and-tools.md  009-integrations-and-platforms.md  009-voice-interface.md  010-identity-and-soul-system.md  010-personality-model-binding.md  011-dynamic-model-discovery.md  011-marketplace-and-skills.md  012-heart-body-hierarchy.md  012-operations-and-lifecycle.md  013-heartbeat-task-scheduling-knowledge-crud.md  013-llm-lifecycle-advanced.md  014-agent-eval-harness.md  014-screen-capture-security-architecture.md  015-data-loss-prevention.md  016-multi-region-ha.md  016-user-consent-capture.md  017-sandboxed-capture-execution.md  017-supply-chain-security.md  018-otel-siem-integration.md  018-proactive-heartbeat-enhancements.md  019-rag-eval-cognitive-ml.md  019-voice-wake-architecture.md  020-prompt-versioning-ab-testing.md  020-push-to-talk.md  (+224 more)
docs/api/: openapi.yaml  rest-api.md  websocket-api.md
docs/development/: architecture.md  brainstorm-2026-3-5.md  contributing.md  dependency-watch.md  friday_suggestions.md  (+4 more)
future_prompts/: BRAIN_SOUL_PROMPT.md  PHASE4_REVIEW_PROMPT.md  PRODUCTION_PROMPT.md  SECURITY_PROMPT.md  TELEGRAM_PROMPT.md  TESTING_PROMPT.md
opa/: capabilities.json
scripts/: build-binary.sh  build-firecracker-rootfs.sh  check-code.sh  generate-icons.py  generate-license-key.ts  generate-openapi.ts  generate-release-notes.test.ts  generate-release-notes.ts  init-test-db.sh  release.sh  set-version.sh  smoke-test-binary.sh  test-db-parallel.sh  train.py  train_dpo.py  train_online.py  train_reward.py  train_rlhf.py  update-stats.sh
site/: index.html  index.html.md  install.sh  llms.txt  robots.txt  sitemap.xml  whitepaper.html  whitepaper.html.md
stats/: test-count
(+221 files in other folders)
