[workspace]
resolver = "2"
members = [
  "sy-crypto",
  "sy-hwprobe",
  "sy-tee",
  "sy-privacy",
  "sy-audit",
  "sy-sandbox",
  "sy-edge",
  "sy-napi",
  "sy-types",
  "sy-core",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "AGPL-3.0-only"
authors = ["SecureYeoman Project Contributors"]

[profile.release]
opt-level = 3
lto = "thin"
strip = true
