[package]
name = "sy-audit"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "SecureYeoman audit chain — HMAC-SHA256 linked tamper-evident log"

[dependencies]
sy-crypto = { path = "../sy-crypto" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
