[package]
name = "sy-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "SecureYeoman core server — axum-based REST/WS API"

[[bin]]
name = "sy-core"
path = "src/main.rs"

[dependencies]
sy-types = { path = "../sy-types" }
sy-crypto = { path = "../sy-crypto" }
sy-privacy = { path = "../sy-privacy" }
sy-audit = { path = "../sy-audit" }
sy-sandbox = { path = "../sy-sandbox" }

axum = { version = "0.8", features = ["json", "ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "set-header"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
jsonwebtoken = "9"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"] }
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
