[package]
name = "sy-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "SecureYeoman cryptographic primitives"

[dependencies]
aes-gcm = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
hmac = "0.12"
hkdf = "0.12"
md-5 = "0.10"
rand = "0.8"
subtle = "2"
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
hex = "0.4"
