[package]
name = "sy-edge"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "SecureYeoman edge runtime binary for IoT/RPi devices"

[[bin]]
name = "sy-edge"
path = "src/main.rs"

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }

[dependencies]
sy-crypto = { path = "../sy-crypto" }
sy-hwprobe = { path = "../sy-hwprobe" }

axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
sha2 = "0.10"
gethostname = "1"
sysinfo = "0.35"
