[package]
name = "sy-hwprobe"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "SecureYeoman hardware accelerator detection (GPU, TPU, NPU, ASIC)"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
