[package]
name = "sy-hwprobe"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "SecureYeoman hardware accelerator detection (GPU, TPU, NPU, ASIC) — wraps ai-hwaccel"

[dependencies]
ai-hwaccel = { version = "1.0", default-features = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
criterion = "0.5"

[[bench]]
name = "detect"
harness = false
