[package]
name = "sy-napi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "SecureYeoman napi-rs bridge for Node.js"

[lib]
crate-type = ["cdylib"]

[dependencies]
sy-crypto = { path = "../sy-crypto" }
sy-hwprobe = { path = "../sy-hwprobe" }
sy-privacy = { path = "../sy-privacy" }
sy-audit = { path = "../sy-audit" }
bhava = { version = "1.1.0", features = ["presets"] }
agnosai = { version = "0.25.3", features = ["definitions", "sandbox"] }
chrono = "0.4"
uuid = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
serde_json = "1"
napi = { version = "2", default-features = false, features = ["napi9", "serde-json", "tokio_rt"] }
napi-derive = "2"

[build-dependencies]
napi-build = "2"
