[package]
name = "sy-napi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "SecureYeoman napi-rs bridge for Node.js"

[lib]
crate-type = ["cdylib"]

[dependencies]
sy-crypto = { path = "../sy-crypto" }
sy-hwprobe = { path = "../sy-hwprobe" }
sy-privacy = { path = "../sy-privacy" }
sy-audit = { path = "../sy-audit" }
sy-sandbox = { path = "../sy-sandbox" }
sy-tee = { path = "../sy-tee" }
bhava = { version = "1.2.0", features = ["presets"] }
agnosai = { version = "1.0.0", features = ["definitions", "sandbox"] }
majra = { version = "1.0", features = ["pubsub", "ratelimit", "heartbeat", "barrier", "queue"] }
szal = { version = "1.0", features = ["majra"] }
bote = { version = "0.50", features = ["bridge"] }
chrono = "0.4"
uuid = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
serde_json = "1"
napi = { version = "2", default-features = false, features = ["napi9", "serde-json", "tokio_rt"] }
napi-derive = "2"

[build-dependencies]
napi-build = "2"
