[package]
name = "sy-privacy"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "SecureYeoman DLP classification — PII regex scanning and content sensitivity detection"

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
