[package]
name = "sy-types"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "SecureYeoman shared types — Rust counterpart of @secureyeoman/shared"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v7", "serde"] }
